# Game

./: .gitignore  CMakeLists.txt  Project.sln  README.md
resource/assets/: character_aftercrop.rar  character_beforecrop.rar
src/: Application.cpp  Application.h  AssetManager.cpp  AssetManager.h  BaseAttack.cpp  BaseAttack.h  BattleState.cpp  BattleState.h  Button.cpp  Button.h  CMakeLists.txt  Character.cpp  Character.h  DEFINITIONS.h  DamageReceiveShader.frag  DeathScreenState.cpp  DeathScreenState.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  GameData.h  GameMenuState.cpp  GameMenuState.h  HUD.cpp  HUD.h  HealthManager.cpp  HealthManager.h  InputManager.cpp  InputManager.h  MagicAttack.cpp  MagicAttack.h  MainMenuState.cpp  MainMenuState.h  Map.cpp  Map.h  Project.cpp  Project.vcxproj  Project.vcxproj.filters  RoundedRectangleShape.cpp  (+10 more)
